fix: optimize cursor movement with GSAP and adjust styling for improved visibility

--- a/src/components/CursorPoiter/CursorPoiter.module.css
+++ b/src/components/CursorPoiter/CursorPoiter.module.css
@@ -1,19 +1,18 @@
 .mover {
   position: fixed;
-  bottom: 0;
-  right: 0;
+  top: 0;
+  left: 0;
   width: 13px;
   height: 13px;
   background-color: white;
   border-radius: 50%;
   pointer-events: none;
-  z-index: 100;
+  z-index: 9999;
   cursor: none;
+  transform: translate(-50%, -50%);
 }
 
 .cardHover {
-  width: 70px;
-  height: 70px;
   border-radius: 50%;
   background: rgba(20, 20, 20, 0.577);
   backdrop-filter: blur(3px);
@@ -25,13 +24,10 @@
 }
 
 .copyHover {
-  width: 70px;
-  height: 70px;
   border-radius: 50%;
   background: rgba(20, 20, 20, 0.577);
   backdrop-filter: blur(3px);
   border: 1px solid rgb(78, 78, 78);
-  transition: all 0.3s ease-out;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -43,7 +39,6 @@
   font-weight: 500;
   text-wrap: nowrap;
   opacity: 0;
-  transition: opacity 0.2s ease-in-out;
 }
 
 .copyHover span {
